assets/css/style.css
/* Global styles */ 

@import url('https://fonts.googleapis.com/css2?family=Rokkitt&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Mina&display=swap');

body {
    background-color: #FFECEC;
    font-family: 'Mina', sans-serif;
    font-size: 18px;
}

header {
    border-bottom: 4px solid rgb(255, 189, 200);
}

h1 {
    font-family: 'Rokkitt', sans-serif;
    font-size: 50px;
    letter-spacing: 10px;
}

h2 {
    font-family: 'Rokkitt', sans-serif;
    font-size: 25px;
    letter-spacing: 3px;
}

h3 {
    font-size: 20px;
}

.no-display {
    visibility: hidden;
}

button {
    background-color: #6FCF97;
    font-size: 20px;
    border-style: none;
    border-radius: 4px;
}

a {
    color: #000;
    text-decoration: none;
}

a:hover {
    color: #000;
}

ul {
    list-style: none;
}

li {
    display: inline-block;
    vertical-align: middle;
}

li a {
    font-size: 35px;
    color: #348857;
    padding-left: 10px;
    padding-right: 10px;
}

footer {
    padding-top: 10px;
    border-top: 4px solid rgb(255, 189, 200);
}

.button {
    background-color: #6FCF97;
    font-size: 20px;
    border-style: none;
    border-radius: 4px;
}

#return-home {
    border: #6FCF97!important;
    background-color: rgb(253, 47, 47);
    padding: 2px;
    color: #fff;
    border-radius: 4px;
    margin-left: 20%;
    margin-top: 0;
    float: left;
}

#return-home-contact {
    border: #6FCF97!important;
    background-color: rgb(253, 47, 47);
    padding: 2px;
    color: #fff;
    border-radius: 4px;
    margin: 0 auto;
    text-align: center;
}

#board {
    margin: 0 auto;
    margin-bottom: 10px;
    clear: both;
}
 
@media screen and (min-width: 900px) {
    .fruitCard {
        padding: 40px;
   }

   #board {
       width: 50%;
   }
}

@media screen and (min-width: 300px) {
    .fruitCard {
        margin-bottom: 10px;
    }

    #board {
        margin-top: 10px;
    }
}

@media screen and (max-width: 900px) {
    #return-home {
        margin-left: 5px;
    }
}

@media screen and (min-width: 300px) {
    .fruitCard {
        margin-bottom: 10px;
    }

    #board {
        width: 80%;
    }
}

.fruitModCard {
    padding: 10px;
}

.fruitHardCard {
    padding-top: 10px;
}

/* Grow effect. Credit: Hover.css library */

.hvr-grow {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
  }

.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}

#timer {
    font-size: 20px;
    margin-left: 70%;
}

.form-elem {
    display: block;
    width: 60%;
    margin: 0 auto;
}

#play-rules {
    clear: both;
}

#counter, #score-text {
    font-size: 25px;
}

